# simple-task-manager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task.hpp  task_database_persistence.cpp  task_file_persistence.cpp  task_manager.cpp  task_manager.hpp
include/: task_persistence.hpp
